syntax = "proto3";

package proto;

service Logger {
    rpc SaveLog (LogData) returns (LogRes) {
    }
}

message LogData {
    string id = 1;
    string payload = 2;
}

message LogRes {
}
